COMPILE-CodeCraft-Interpreter/src/antlr4/CodeCraftGrammarParser.java
// Generated from C:\Users\LorddMichael\eclipse workspace\COMPILE-CodeCraft-Interpreter\src\antlr4\CodeCraftGrammar.g4 by ANTLR 4.1

package antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CodeCraftGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT=1, PRINTLN=2, SUMMON=3, PARTY=4, ABSOLUTE=5, DARKNESS=6, MINE=7, 
		CHOKE=8, PROLONG=9, WETHER=10, OTHERWISE=11, UNTIL=12, EXECUTE=13, AS=14, 
		REPLY=15, NULL=16, INT=17, CHAR=18, STRING=19, FLOAT=20, BOOLEAN=21, LPAREN=22, 
		RPAREN=23, LBRACE=24, RBRACE=25, LBRACK=26, RBRACK=27, SEMI=28, COMMA=29, 
		DOT=30, ASSIGN=31, GT=32, LT=33, BANG=34, EQUAL=35, LE=36, GE=37, NOTEQUAL=38, 
		AND=39, OR=40, ADD=41, SUB=42, MUL=43, DIV=44, MOD=45, IntegerLiteral=46, 
		FloatingPointLiteral=47, CharacterLiteral=48, StringLiteral=49, BooleanLiteral=50, 
		ID=51, WS=52, COMMENT=53, LINE_COMMENT=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'print'", "'println'", "'summon'", "'party'", "'absolute'", 
		"'darkness'", "'mine'", "'choke'", "'prolong'", "'wether'", "'otherwise'", 
		"'until'", "'execute'", "'as'", "'reply'", "'NULL'", "'int'", "'char'", 
		"'string'", "'float'", "'boolean'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'=='", "'<='", 
		"'>='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "IntegerLiteral", 
		"FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "BooleanLiteral", 
		"ID", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_program = 0, RULE_constantStatement = 1, RULE_variableDeclaration = 2, 
		RULE_dataType = 3, RULE_functionList = 4, RULE_functionDeclaration = 5, 
		RULE_returnType = 6, RULE_parameterList = 7, RULE_parameter = 8, RULE_block = 9, 
		RULE_mainFunction = 10, RULE_statement = 11, RULE_assignmentStatement = 12, 
		RULE_functionCallStatement = 13, RULE_actualParameterList = 14, RULE_actualParameters = 15, 
		RULE_ifStatement = 16, RULE_condition = 17, RULE_whileStatement = 18, 
		RULE_doWhileStatement = 19, RULE_forStatement = 20, RULE_returnStatement = 21, 
		RULE_expression = 22, RULE_numExpression = 23, RULE_numTerm = 24, RULE_numFactor = 25, 
		RULE_booleanExpression = 26, RULE_relationalOperator = 27, RULE_booleanLogical = 28, 
		RULE_booleanTerm = 29, RULE_booleanFactor = 30;
	public static final String[] ruleNames = {
		"program", "constantStatement", "variableDeclaration", "dataType", "functionList", 
		"functionDeclaration", "returnType", "parameterList", "parameter", "block", 
		"mainFunction", "statement", "assignmentStatement", "functionCallStatement", 
		"actualParameterList", "actualParameters", "ifStatement", "condition", 
		"whileStatement", "doWhileStatement", "forStatement", "returnStatement", 
		"expression", "numExpression", "numTerm", "numFactor", "booleanExpression", 
		"relationalOperator", "booleanLogical", "booleanTerm", "booleanFactor"
	};

	@Override
	public String getGrammarFileName() { return "CodeCraftGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodeCraftGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CodeCraftGrammarParser.EOF, 0); }
		public ConstantStatementContext constantStatement(int i) {
			return getRuleContext(ConstantStatementContext.class,i);
		}
		public FunctionListContext functionList() {
			return getRuleContext(FunctionListContext.class,0);
		}
		public List<ConstantStatementContext> constantStatement() {
			return getRuleContexts(ConstantStatementContext.class);
		}
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ABSOLUTE) {
				{
				{
				setState(62); constantStatement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68); mainFunction();
			setState(69); functionList();
			setState(70); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantStatementContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(CodeCraftGrammarParser.ASSIGN, 0); }
		public TerminalNode ABSOLUTE() { return getToken(CodeCraftGrammarParser.ABSOLUTE, 0); }
		public TerminalNode SEMI() { return getToken(CodeCraftGrammarParser.SEMI, 0); }
		public TerminalNode ID() { return getToken(CodeCraftGrammarParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public ConstantStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterConstantStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitConstantStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitConstantStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantStatementContext constantStatement() throws RecognitionException {
		ConstantStatementContext _localctx = new ConstantStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constantStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(ABSOLUTE);
			setState(73); dataType();
			setState(74); match(ID);
			setState(75); match(ASSIGN);
			setState(76); expression();
			setState(77); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(CodeCraftGrammarParser.SEMI, 0); }
		public TerminalNode ID() { return getToken(CodeCraftGrammarParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); dataType();
			setState(80); match(ID);
			setState(81); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
	 
		public DataTypeContext() { }
		public void copyFrom(DataTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DataTypeBooleanContext extends DataTypeContext {
		public TerminalNode BOOLEAN() { return getToken(CodeCraftGrammarParser.BOOLEAN, 0); }
		public DataTypeBooleanContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterDataTypeBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitDataTypeBoolean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitDataTypeBoolean(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataTypeStringContext extends DataTypeContext {
		public TerminalNode STRING() { return getToken(CodeCraftGrammarParser.STRING, 0); }
		public DataTypeStringContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterDataTypeString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitDataTypeString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitDataTypeString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataTypeIntContext extends DataTypeContext {
		public TerminalNode INT() { return getToken(CodeCraftGrammarParser.INT, 0); }
		public DataTypeIntContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterDataTypeInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitDataTypeInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitDataTypeInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataTypeFloatContext extends DataTypeContext {
		public TerminalNode FLOAT() { return getToken(CodeCraftGrammarParser.FLOAT, 0); }
		public DataTypeFloatContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterDataTypeFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitDataTypeFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitDataTypeFloat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataTypeCharContext extends DataTypeContext {
		public TerminalNode CHAR() { return getToken(CodeCraftGrammarParser.CHAR, 0); }
		public DataTypeCharContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterDataTypeChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitDataTypeChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitDataTypeChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataType);
		try {
			setState(88);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new DataTypeIntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83); match(INT);
				}
				break;
			case FLOAT:
				_localctx = new DataTypeFloatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84); match(FLOAT);
				}
				break;
			case CHAR:
				_localctx = new DataTypeCharContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85); match(CHAR);
				}
				break;
			case STRING:
				_localctx = new DataTypeStringContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(86); match(STRING);
				}
				break;
			case BOOLEAN:
				_localctx = new DataTypeBooleanContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(87); match(BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionListContext extends ParserRuleContext {
		public FunctionListContext functionList() {
			return getRuleContext(FunctionListContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterFunctionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitFunctionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitFunctionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionListContext functionList() throws RecognitionException {
		FunctionListContext _localctx = new FunctionListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionList);
		try {
			setState(94);
			switch (_input.LA(1)) {
			case DARKNESS:
			case INT:
			case CHAR:
			case STRING:
			case FLOAT:
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(90); functionDeclaration();
				setState(91); functionList();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CodeCraftGrammarParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(CodeCraftGrammarParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(CodeCraftGrammarParser.LPAREN, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); returnType();
			setState(97); match(ID);
			setState(98); match(LPAREN);
			setState(100);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << STRING) | (1L << FLOAT) | (1L << BOOLEAN))) != 0)) {
				{
				setState(99); parameterList();
				}
			}

			setState(102); match(RPAREN);
			setState(103); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	 
		public ReturnTypeContext() { }
		public void copyFrom(ReturnTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnDarknessContext extends ReturnTypeContext {
		public TerminalNode DARKNESS() { return getToken(CodeCraftGrammarParser.DARKNESS, 0); }
		public ReturnDarknessContext(ReturnTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterReturnDarkness(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitReturnDarkness(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitReturnDarkness(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnDataTypeContext extends ReturnTypeContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public ReturnDataTypeContext(ReturnTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterReturnDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitReturnDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitReturnDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_returnType);
		try {
			setState(107);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case STRING:
			case FLOAT:
			case BOOLEAN:
				_localctx = new ReturnDataTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(105); dataType();
				}
				break;
			case DARKNESS:
				_localctx = new ReturnDarknessContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(106); match(DARKNESS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(CodeCraftGrammarParser.COMMA); }
		public ParameterListContext parameterList(int i) {
			return getRuleContext(ParameterListContext.class,i);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public List<ParameterListContext> parameterList() {
			return getRuleContexts(ParameterListContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(CodeCraftGrammarParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeCraftGrammarListener ) ((CodeCraftGrammarListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodeCraftGrammarVisitor ) return ((CodeCraftGrammarVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameterList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109); parameter();
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(110); match(COMMA);
					setState(111); parameterList();
					}
					} 
				}
				setState(116);
